fix(NewsRoom): change instagram feed height to 600px on tablet

--- a/src/sass/modules/comms-homepage.scss
+++ b/src/sass/modules/comms-homepage.scss
@@ -172,6 +172,7 @@ iframe.instagram {
     }
 
     @media #{$tablet} {
-        height: 700px;
+        width: 475px;
+        height: 600px;
     }    
 }
